# broker-agent

./: .gitignore  CLAUDE.md  CLIENT_PROPOSAL.md  README.md  RESEARCH.md  biome.json  index.html  package-lock.json  package.json
.claude/commands/: commit.md  fix.md  test.md  update-app.md
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  oauth.rs
src-tauri/src/commands/: ai.rs  broker.rs  clients.rs  dashboard.rs  deals.rs  documents.rs  emails.rs  license.rs  meetings.rs  mod.rs  policies.rs  recording.rs
src-tauri/src/db/: helpers.rs  init.rs  mod.rs  models.rs
src/components/: BankPolicies.tsx  Clients.tsx  Dashboard.tsx  IndustryNews.tsx  LicenseGate.tsx  Meetings.tsx  Settings.tsx  Team.tsx
src/test/: policyMatching.test.ts  utils.test.ts
src/types/: api.ts
src/utils/: formatters.ts  policyMatching.ts
