[package]
name = "brokeragent"
version = "0.2.0"
edition = "2021"
rust-version = "1.77.2"
default-run = "brokeragent"

[lib]
name = "brokeragent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "generate_license"
path = "src/bin/generate_license.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hound = "3.5"
cpal = "0.15"
lazy_static = "1.5"
tokio = { version = "1", features = ["net", "io-util", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
open = "5"
url = "2"
urlencoding = "2"
thiserror = "1"
tracing = "0.1"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15", features = ["vulkan"] }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
whisper-rs = "0.15"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
